unpackaged/main/default/objects/splashthat__Entity__c/splashthat__Entity__c.object-meta.xml
<CustomObject>
    <description>API Entity Mapping</description>
    <label>Entity</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>