unpackaged/main/default/objects/splashthat__Entity__c/fields/splashthat__API_Entity__c.field-meta.xml
<CustomField>
    <fullName>splashthat__API_Entity__c</fullName>
    <description>DeveloperName of the API Entity Custom Metadata Type</description>
    <label>API Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>