unpackaged/main/default/objects/splashthat__Entity__c/fields/splashthat__External_ID__c.field-meta.xml
<CustomField>
    <fullName>splashthat__External_ID__c</fullName>
    <description>External ID Field API Name</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>