unpackaged/main/default/objects/splashthat__Entity__c/fields/splashthat__Object__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Object__c</fullName>
    <description>Salesforce Object API Name</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>