unpackaged/main/default/objects/splashthat__Entity__c/fields/splashthat__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Record_Type__c</fullName>
    <description>Record Type DeveloperName</description>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>