unpackaged/main/default/objects/splashthat__Entity__c/listViews/splashthat__All.listView-meta.xml
<ListView>
    <fullName>splashthat__All</fullName>
    <columns>NAME</columns>
    <columns>splashthat__API_Entity__c</columns>
    <columns>splashthat__Object__c</columns>
    <columns>splashthat__External_ID__c</columns>
    <columns>splashthat__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>